--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <!-- <nav class="navbar">
-    <ul>
-    </ul>
-  </nav> -->
   <div class="weather-overview">
     <div class="weather-icon-box">
       <img id="weather-icon" src="icons/cloudy.svg" alt="weather icon">        
@@ -61,5 +57,6 @@
       </div>
     </div>
   </div> 
+  <script src="dist/script.js"></script>
 </body>
 </html>
