style weather overview section

--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
 </head>
 <body>
   <div class="weather-overview">
-    <div class="weather-icon-box">
-      <img id="weather-icon" src="weather_icons/centered/stroke/day/03.svg" alt="weather icon">     
-    </div>
     <div class="weather-summary">
-      <p>11C</p>
-      <p>Stockholm</p>
-      <p>Broken Clouds</p>
+      <div class="weather-icon-box">
+        <img id="weather-icon" src="weather_icons/centered/stroke/day/03.svg" alt="weather icon">     
+      </div>
+      <div class="weather-text">
+        <h1>11°C</h1>
+        <h2>Stockholm</h2>
+        <p>Time: 15:00</p>
+        <p>Broken Clouds</p>
+      </div>
     </div>
     <div class="sunrise-sunset">
+      <p>Sunrise: 07:25</p>
+      <p>Sunset: 17:41</p>
     </div>
   </div>
   <button class="arrow-button">&#10095;</button>
