add function inserWeatherData for adding the data on the page + make getLocationAndCoordinates async and wait for the fetch weather data function to finish before calling insertWeatherData

--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
         <div class="weather-icon-box">
           <img id="weather-icon" src="weather_icons/centered/stroke/day/03.svg" alt="weather icon">     
         </div>
-        <div class="weather-text">
-          <h1>11°C</h1>
-          <h2>Stockholm</h2>
-          <p>Time: 15:00</p>
-          <p>Broken Clouds</p>
+        <div class="weather-text" id="weather-text">
         </div>
       </div>
       <div class="sunrise-sunset">
