add the property place to weatherData + add the right  weather icon dynamically to the weather overview section

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <div class="app-container">
     <div class="weather-overview">
       <div class="weather-summary">
-        <div class="weather-icon-box">
-          <img id="weather-icon" src="weather_icons/centered/stroke/day/03.svg" alt="weather icon">     
+        <div class="weather-icon-box" id="weather-icon-box">
         </div>
         <div class="weather-text" id="weather-text">
         </div>
@@ -26,35 +25,35 @@
       <div class="day-box">
         <p class="day">Mon</p>
         <div class="details">
-          <img id="weather-icon" src="weather_icons/centered/stroke/day/03.svg" alt="weather icon">    
+          <img id="weather-icon" src="weather_icons/centered/stroke/day/3.svg" alt="weather icon">    
           <p class="degrees">26° / 12 °C</p>
         </div>
       </div>
       <div class="day-box">
         <p class="day">Tue</p>
         <div class="details">
-          <img id="weather-icon" src="weather_icons/centered/stroke/day/04.svg" alt="weather icon">    
+          <img id="weather-icon" src="weather_icons/centered/stroke/day/4.svg" alt="weather icon">    
           <p class="degrees">26° / 12 °C</p>
         </div>
       </div>
       <div class="day-box">
         <p class="day">Wed</p>
         <div class="details">
-          <img id="weather-icon" src="weather_icons/centered/stroke/day/05.svg" alt="weather icon">    
+          <img id="weather-icon" src="weather_icons/centered/stroke/day/5.svg" alt="weather icon">    
           <p class="degrees">26° / 12 °C</p>
         </div>
       </div>
       <div class="day-box">
         <p class="day">Thu</p>
         <div class="details">
-          <img id="weather-icon" src="weather_icons/centered/stroke/day/04.svg" alt="weather icon">    
+          <img id="weather-icon" src="weather_icons/centered/stroke/day/4.svg" alt="weather icon">    
           <p class="degrees">26° / 12 °C</p>
         </div>
       </div>
       <div class="day-box">
         <p class="day">Fri</p>
         <div class="details">
-          <img id="weather-icon" src="weather_icons/centered/stroke/day/09.svg" alt="weather icon">    
+          <img id="weather-icon" src="weather_icons/centered/stroke/day/9.svg" alt="weather icon">    
           <p class="degrees">26° / 12 °C</p>
         </div>
       </div>
