add function for getting min and max temperature from weatherArrayGroupedByDate + add weekly weather data in the function that inserts data on the page

--- a/index.html
+++ b/index.html
@@ -21,42 +21,7 @@
       </div>
     </div>
     <button class="arrow-button">&#10095;</button>
-    <div class="weekly-details">
-      <div class="day-box">
-        <p class="day">Mon</p>
-        <div class="details">
-          <img id="weather-icon" src="weather_icons/centered/stroke/day/3.svg" alt="weather icon">    
-          <p class="degrees">26° / 12 °C</p>
-        </div>
-      </div>
-      <div class="day-box">
-        <p class="day">Tue</p>
-        <div class="details">
-          <img id="weather-icon" src="weather_icons/centered/stroke/day/4.svg" alt="weather icon">    
-          <p class="degrees">26° / 12 °C</p>
-        </div>
-      </div>
-      <div class="day-box">
-        <p class="day">Wed</p>
-        <div class="details">
-          <img id="weather-icon" src="weather_icons/centered/stroke/day/5.svg" alt="weather icon">    
-          <p class="degrees">26° / 12 °C</p>
-        </div>
-      </div>
-      <div class="day-box">
-        <p class="day">Thu</p>
-        <div class="details">
-          <img id="weather-icon" src="weather_icons/centered/stroke/day/4.svg" alt="weather icon">    
-          <p class="degrees">26° / 12 °C</p>
-        </div>
-      </div>
-      <div class="day-box">
-        <p class="day">Fri</p>
-        <div class="details">
-          <img id="weather-icon" src="weather_icons/centered/stroke/day/9.svg" alt="weather icon">    
-          <p class="degrees">26° / 12 °C</p>
-        </div>
-      </div>
+    <div class="weekly-details" id="weekly-details">
     </div> 
     <script src="dist/script.js"></script>
   </div>
