add event listener on arrow button + a function that takes an index variable and increments it before using it to call getLocationAndCoordinates + refactor insertWeatherData to include index as a parameter

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>Sunset: 17:41</p>
       </div>
     </div>
-    <button class="arrow-button">&#10095;</button>
+    <button class="arrow-button" id="arrow-button">&#10095;</button>
     <div class="weekly-details" id="weekly-details">
     </div> 
     <script src="dist/script.js"></script>
