add styling for the search field and eventlisteners for the search input in order to fetch data from Geo data

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
           id="search-input"
           placeholder="Search"
         />
-        <button class="search-btn-right">
+        <button
+          class="search-btn-right"
+          id="search-btn-right"
+        >
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
       </div>
