add sunrise and sunset time dynamically in inserWeatherData

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         <div class="weather-text" id="weather-text">
         </div>
       </div>
-      <div class="sunrise-sunset">
-        <p>Sunrise: 07:25</p>
-        <p>Sunset: 17:41</p>
+      <div class="sunrise-sunset" id="sunrise-sunset">
       </div>
     </div>
     <button class="arrow-button" id="arrow-button">&#10095;</button>
