--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
@@ -33,7 +38,6 @@
 
         <div class="weather-overview">
           <div class="weather-summary">
-            <div class="weather-icon-box" id="weather-icon-box"></div>
             <div class="weather-text" id="weather-text"></div>
           </div>
           <div class="sunrise-sunset" id="sunrise-sunset"></div>
