change font style

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
       <div class="app-container">
         <!-- Search field -->
         <div class="search-container">
-          <button class="search-btn" id="search-btn">
+          <button class="search-btn" id="search-btn" aria-label="Search">
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
 
-          <button class="close-btn" id="close-btn">
+          <button class="close-btn" id="close-btn" aria-label="Close">
             <i class="fa-solid fa-xmark"></i>
           </button>
           <!-- Search box -->
           <div class="search-box">
             <input type="text" id="search-input" placeholder="Search" />
-            <button class="search-btn-right" id="search-btn-right">
+            <button class="search-btn-right" id="search-btn-right" aria-label="Search">
               <i class="fa-solid fa-magnifying-glass"></i>
             </button>
           </div>
