add classes for different weather over images and change the classes dynamically depending on place

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
         </div>
 
-        <div class="weather-overview">
+        <div class="weather-overview default-image">
           <div class="weather-summary">
             <div class="weather-text" id="weather-text"></div>
           </div>
