--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Weather app</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
@@ -37,6 +37,7 @@
         </div>
 
         <div class="weather-overview default-image">
+          <div class="weather-effect" id="weather-effect"></div>
           <div class="weather-summary">
             <div class="weather-text" id="weather-text"></div>
           </div>
