clean code in HTML and CSS + add media query for larger screens

--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
       <div class="app-container">
         <!-- Search field -->
         <div class="search-container">
-          <button class="search-btn" id="search-btn" aria-label="Search">
+          <button 
+            class="search-btn" 
+            id="search-btn" 
+            aria-label="Search">
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
 
-          <button class="close-btn" id="close-btn" aria-label="Close">
+          <button 
+            class="close-btn" 
+            id="close-btn" 
+            aria-label="Close">
             <i class="fa-solid fa-xmark"></i>
           </button>
           <!-- Search box -->
